feat: Add Firebase authentication with user accounts and favorites
- Integrated Firebase Admin SDK for backend authentication
- Created user registration and login system (email/password)
- Added session management and logout functionality
- Implemented favorites feature for logged-in users
- Users can save and manage favorite generated words
- Created user_features module for custom affixes (future use)
- Added mobile-responsive sidebar with login/register forms
- Fixed dark mode text colors in sidebar and main content
- Updated gitignore to protect Firebase credentials
- Added secrets template for deployment configuration

New files:
- config/firebase_config.py: Firebase initialization
- core/auth.py: Authentication logic
- core/user_features.py: User-specific features (favorites, custom affixes)
- .streamlit/secrets.toml.template: Deployment secrets template

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ miniconda3/
 .streamlit/config.toml
 .streamlit/secrets.toml
 
+# Firebase credentials
+streamlit-app/config/firebase-credentials.json
+config/firebase-credentials.json
+
 # System files
 .DS_Store
 Thumbs.db
